--- a/src/app/courses/courses.component.scss
+++ b/src/app/courses/courses.component.scss
@@ -43,7 +43,7 @@ table {
 }
 
 th {
-    background-color: #c0ece7;
+    background-color: #92eae0;
     text-align: left;
     padding: 8px;
     cursor: pointer;
