--- a/src/app/courses/courses.component.scss
+++ b/src/app/courses/courses.component.scss
@@ -6,7 +6,7 @@ h1 {
 }
 
 .topdiv {
-    border: 2px solid black;
+    border: 2px solid rgb(58, 121, 144);
     border-radius: 2px;
     background-color: #92eae0;
     max-width: 600px;
@@ -23,7 +23,7 @@ h1 {
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
-    border: 2px solid black;
+    border: 2px solid rgb(58, 121, 144);
     border-radius: 2px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
@@ -31,15 +31,16 @@ h1 {
 input[type="text"] {
     padding: 10px;
     font-size: 16px;
+    font-family: "Goldman", sans-serif;
     margin-bottom: 10px;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 table {
-    width: 100%;
+    width: 96%;
     border-collapse: collapse;
-    margin-bottom: 20px;
+    margin: 2%;
 }
 
 th {
@@ -56,7 +57,6 @@ th:hover {
 }
 
 td {
-    border-bottom: 1px solid #ddd;
     padding: 8px;
 }
 
