--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -7,7 +7,7 @@
 <div class="tablediv">
     <table>
         <thead>
-            <tr>
+            <tr id="headerrow">
                 <th (click)="sort('code')">Kurskod</th>
                 <th (click)="sort('coursename')">Kursnamn</th>
                 <th (click)="sort('progression')">Progression</th>
